orgined project into folder

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <title>MissionRnD</title>
 
-      <link rel="stylesheet" type="text/css" href="homecss.css">
+      <link rel="stylesheet" type="text/css" href="css/homecss.css">
 
       <!--Import jQuery-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -28,7 +28,7 @@
             <div class="col-sml-12">
               <nav>
                 <div class="nav-wrapper flow-text" id="fixedHeader"> <!--deep-purple lighten-2 can be used-->
-                  <a href="#" class="brand-logo"><img src="missionRnD.png" alt="Mission R and D 2017"></a>
+                  <a href="#" class="brand-logo"><img src="resources/missionRnD.png" alt="Mission R and D 2017"></a>
                   <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				  <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="dashboard.html">Home</a></li>
@@ -57,7 +57,7 @@
          <!--end of the top bar--> 
 
          <div class="parallax-container">
-      		<div class="parallax"><img src="parallaxImg.jpg" class="responsive-img"></div>
+      		<div class="parallax"><img src="resources/parallaxImg.jpg" class="responsive-img"></div>
     	</div>
 
          <!--start Content Card 1 -->
@@ -85,7 +85,7 @@
          <!--start Content Card 1--> 
 
 		<div class="parallax-container">
-      		<div class="parallax"><img src="parallaxImg.jpg"></div>
+      		<div class="parallax"><img src="resources/parallaxImg.jpg"></div>
     	</div>
 
          <!--start of empty area.Should include a parallax image here -->
