--- a/login.html
+++ b/login.html
@@ -4,9 +4,9 @@
       <meta charset="UTF-8">
       <title>MissionRnD</title>
 
-      <link rel="stylesheet" type="text/css" href="testimonalscss.css">
-	  <link rel="stylesheet" type="text/css" href="homecss.css">
-      <link rel="stylesheet" type="text/css" href="login.css">
+      <link rel="stylesheet" type="text/css" href="css/testimonalscss.css">
+	  <link rel="stylesheet" type="text/css" href="css/homecss.css">
+      <link rel="stylesheet" type="text/css" href="css/login.css">
       <!--Import jQuery-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
@@ -27,7 +27,7 @@
             <div class="col-sml-12">
               <nav>
                 <div class="nav-wrapper flow-text" id="fixedHeader"> <!--deep-purple lighten-2 can be used-->
-                  <a href="#" class="brand-logo"><img src="missionRnD.png" alt="Mission R and D 2017"></a>	
+                  <a href="#" class="brand-logo"><img src="resources/missionRnD.png" alt="Mission R and D 2017"></a>	
                 </div>
               </nav>
             </div>
@@ -37,28 +37,28 @@
       <div class="slider">
     <ul class="slides">
       <li>
-        <img src="vineeth_Guna.jpg">
+        <img src="resources/vineeth_Guna.jpg">
 		<div id="imgframe" class="caption left-align">
          <p> <h5 class="light grey-text text-lighten-3">In Pre-Summer classes, I got a chance <br>to solve a lot of problems which in turn helped improve my problem solving <br>abilities.</h5></p>
          <p><h5 class="light grey-text text-lighten-3">Summer classes had a very good environment where everyone is<br> passionate about learning.</h5></p>
 		</div>
       </li>
       <li>
-        <img src="vineeth_Guna.jpg">
+        <img src="resources/vineeth_Guna.jpg">
 		<div id="imgframe" class="caption left-align">
          <p> <h5 class="light grey-text text-lighten-3">In Pre-Summer classes, I got a chance <br>to solve a lot of problems which in turn helped improve my problem solving <br>abilities.</h5></p>
          <p><h5 class="light grey-text text-lighten-3">Summer classes had a very good environment where everyone is<br> passionate about learning.</h5></p>
 		</div>
       </li>
       <li>
-        <img src="vineeth_Guna.jpg">
+        <img src="resources/vineeth_Guna.jpg">
 		<div id="imgframe" class="caption left-align">
          <p> <h5 class="light grey-text text-lighten-3">In Pre-Summer classes, I got a chance <br>to solve a lot of problems which in turn helped improve my problem solving <br>abilities.</h5></p>
          <p><h5 class="light grey-text text-lighten-3">Summer classes had a very good environment where everyone is<br> passionate about learning.</h5></p>
 		</div>
       </li>
       <li>
-        <img src="vineeth_Guna.jpg">
+        <img src="resources/vineeth_Guna.jpg">
 		<div id="imgframe" class="caption left-align">
          <p> <h5 class="light grey-text text-lighten-3">In Pre-Summer classes, I got a chance <br>to solve a lot of problems which in turn helped improve my problem solving <br>abilities.</h5></p>
          <p><h5 class="light grey-text text-lighten-3">Summer classes had a very good environment where everyone is<br> passionate about learning.</h5></p>
