--- a/dashboard.html
+++ b/dashboard.html
@@ -2,10 +2,10 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8">
-      <title>LoveToLearn</title>
+      <title>MissionRnD</title>
 
-      <link rel="stylesheet" type="text/css" href="dashboard.css">
-	  <link rel="stylesheet" type="text/css" href="homecss.css">
+      <link rel="stylesheet" type="text/css" href="css/dashboard.css">
+	  <link rel="stylesheet" type="text/css" href="css/homecss.css">
 
       <!--Import jQuery-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -24,6 +24,36 @@
 		 
    </head>
    <body>
+        <div class="row">
+            <div class="col-sml-12">
+              <nav>
+                <div class="nav-wrapper flow-text" id="fixedHeader"> <!--deep-purple lighten-2 can be used-->
+                  <a href="#" class="brand-logo"><img src="resources/missionRnD.png" alt="Mission R and D 2017"></a>
+                  <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+				  <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="people.html">People</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
+                    <li><a href="nextProgram.html">Mission RnD 2017</a></li>
+                    <li>
+                       <a href="#modal1">Login</a>
+                    </li>
+                  </ul>
+				  <ul id="mobile-demo" class="side-nav">
+                     <li class="no-padding">
+                       <ul class="collapsible collapsible-accordion">
+					     <li class="bold"><a class="collapsible-header  waves-effect waves-teal" href="home.html">Home</a></li>
+						 <li class="bold"><a class="collapsible-header  waves-effect waves-teal" href="people.html">People</a></li>
+						 <li class="bold"><a class="collapsible-header  waves-effect waves-teal" href="testimonials.html">Testimonials</a></li>
+						 <li class="bold"><a class="collapsible-header  waves-effect waves-teal" href="nextProgram.html">Mission RnD 2017</a></li>
+						 <li class="bold"><a class="collapsible-header  waves-effect waves-teal" href="#modal1">Login</a></li>
+					   </ul>
+					 </li>
+				  </ul>
+                </div>
+              </nav>
+            </div>
+   </div>
    <div class="row">
       <div class="col s12 m4 l3">
 	   
