--- a/testimonials.html
+++ b/testimonials.html
@@ -4,8 +4,8 @@
       <meta charset="UTF-8">
       <title>MissionRnD</title>
 
-      <link rel="stylesheet" type="text/css" href="testimonalscss.css">
-	  <link rel="stylesheet" type="text/css" href="homecss.css">
+      <link rel="stylesheet" type="text/css" href="css/testimonalscss.css">
+	  <link rel="stylesheet" type="text/css" href="css/homecss.css">
 
       <!--Import jQuery-->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -27,7 +27,7 @@
             <div class="col-sml-12">
               <nav>
                 <div class="nav-wrapper flow-text" id="fixedHeader"> <!--deep-purple lighten-2 can be used-->
-                  <a href="#" class="brand-logo"><img src="missionRnD.png" alt="Mission R and D 2017"></a>
+                  <a href="#" class="brand-logo"><img src="resources/missionRnD.png" alt="Mission R and D 2017"></a>
                   <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				  <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li><a href="home.html">Home</a></li>
