--- a/dashboard.html
+++ b/dashboard.html
@@ -3,64 +3,121 @@
    <head>
       <meta charset="UTF-8">
       <title>MissionRnD</title>
-
-      <link rel="stylesheet" type="text/css" href="css/dashboard.css">
-	  <link rel="stylesheet" type="text/css" href="css/homecss.css">
-
-      <!--Import jQuery-->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-      <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-      <!-- Include the materialize css CDN files-->
-         <!-- Compiled and minified CSS -->
-         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
-         <!-- Compiled and minified JavaScript -->
-         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
-      <!--End of including the materialize css CDN files -->
-         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-		 <script src="app/app.js"></script>
-		 
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	  <link rel="stylesheet" type="text/css" href="css/dashboard.css">
    </head>
-   <body>
-        <div class="row">
-            <div class="col-sml-12">
-              <nav>
-                <div class="nav-wrapper flow-text" id="fixedHeader"> <!--deep-purple lighten-2 can be used-->
-                  <a href="#" class="brand-logo"><img src="resources/missionRnD.png" alt="Mission R and D 2017"></a>
-                  <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-				  <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="people.html">People</a></li>
-                    <li><a href="testimonials.html">Testimonials</a></li>
-                    <li><a href="nextProgram.html">Mission RnD 2017</a></li>
-                    <li>
-                       <a href="#modal1">Login</a>
-                    </li>
-                  </ul>
-				  <ul id="mobile-demo" class="side-nav">
-                     <li class="no-padding">
-                       <ul class="collapsible collapsible-accordion">
-					     <li class="bold"><a class="collapsible-header  waves-effect waves-teal" href="home.html">Home</a></li>
-						 <li class="bold"><a class="collapsible-header  waves-effect waves-teal" href="people.html">People</a></li>
-						 <li class="bold"><a class="collapsible-header  waves-effect waves-teal" href="testimonials.html">Testimonials</a></li>
-						 <li class="bold"><a class="collapsible-header  waves-effect waves-teal" href="nextProgram.html">Mission RnD 2017</a></li>
-						 <li class="bold"><a class="collapsible-header  waves-effect waves-teal" href="#modal1">Login</a></li>
-					   </ul>
-					 </li>
-				  </ul>
-                </div>
-              </nav>
-            </div>
-   </div>
+   <body ng-app="DashboardForm">
+   <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container"> 
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span> 
+            </button>
+            <a target="_blank" href="#" class="navbar-brand">Mission R&D</a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <span class="glyphicon glyphicon-user"></span> 
+                        <strong>Yamini</strong>
+                        <span class="glyphicon glyphicon-chevron-down"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <div class="navbar-login">
+                                <div class="row">
+                                    <div class="col-lg-4">
+                                        <p class="text-center">
+                                            <span class="glyphicon glyphicon-user icon-size"></span>
+                                        </p>
+                                    </div>
+                                    <div class="col-lg-8">
+                                        <p class="text-left"><strong>Yamini Thota</strong></p>
+                                        <p class="text-left small">yamini10.thota@gmail.com</p>
+										<p class="text-left">
+                                            <a href="#" class="btn btn-primary btn-block btn-sm">Profile</a>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="divider navbar-login-session-bg"></li>
+                         <li><a href="#">Account Settings <span class="glyphicon glyphicon-cog pull-right"></span></a></li>
+            <li class="divider"></li>
+            <li><a href="#">Messages <span class="badge pull-right"> 2 </span></a></li>
+            <li class="divider"></li>
+            <li><a href="#">Sign Out <span class="glyphicon glyphicon-log-out pull-right"></span></a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
    <div class="row">
       <div class="col s12 m4 l3">
 	   
 	  </div>
 	  <div class="col s12 m8 l9">
+	  <div role="main" class="container theme-showcase" id="mainContainer">
+      <div class="" style="margin-top:10px;">
+	  <div class="bs-component" ng-controller="listdata">
+				<form class="form-inline">
+					<div class="form-group">
+						<label >Search</label>
+						<input type="text" ng-model="search" class="form-control" placeholder="Search">
+					</div>
+				</form>
+				<table class="table table-striped table-hover">
+					<thead>
+						<tr>
+						    <th></th>
+							<th ng-click="sort('first_name')">Name
+								<span class="glyphicon sort-icon" ng-show="sortKey=='first_name'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+							</th>
+							<th ng-click="sort('collegeName')">College
+								<span class="glyphicon sort-icon" ng-show="sortKey=='collegeName'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+							</th>
+							<th ng-click="sort('skills')">Skills
+								<span class="glyphicon sort-icon" ng-show="sortKey=='skills'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+							</th>
+							<th ng-click="sort('updated')">Updated
+								<span class="glyphicon sort-icon" ng-show="sortKey=='updated'" ng-class="{'glyphicon-chevron-up':reverse,'glyphicon-chevron-down':!reverse}"></span>
+							</th>
+							<th></th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr dir-paginate="user in users|orderBy:sortKey:reverse|filter:search|itemsPerPage:10">
+						    <td><label><input type="checkbox" ng-model="user.id"></label></td>
+							<td>{{user.first_name}}</td>
+							<td>{{user.collegeName}}</td>
+							<td>{{user.skills}}</td>
+							<td>{{user.updated}}</td>
+							<td><i class="fa fa-chevron-right" aria-hidden="true"></i></td>
+						</tr>
+					</tbody>
+				</table>
+				<div class="col s12 m4 l6">
+				<dir-pagination-controls
+					max-size="5"
+					direction-links="true"
+					boundary-links="true" >
+				</dir-pagination-controls>
+				</div>
+			</div>
+			</div>
+			</div>
 	  </div>
    </div>
+   <script src="lib/angular/angular.js"></script>
+   <script src="lib/dirPagination.js"></script>
+   <script src="app/app.js"></script>
    </body>
    <script>
    </script>
